<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Notes</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Notes not saved because it is empty</string>
    <string name="add_word">Add Note</string>
    <string name="grades">Grades</string>
    <string name="map">Map</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="updat">Update</string>
    <string name="descri_ao">Description</string>
    <string name="emailLogin">Insert an email</string>
    <string name="fail">FAIL</string>
    <string name="loginTitulo">Login</string>
    <string name="nameLogin">Email:</string>
    <string name="passwordLogin">Password:</string>
    <string name="passwordLoginHint">Password</string>
    <string name="nomePasswordHint">Email</string>
    <string name="loginshared">loginshared</string>
    <string name="loginSharePreferences" translatable="false">LoginSharePreferences</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="pass_login">Insert a password</string>
    <string name="novoEmail" translatable="false">emailshared</string>
    <string name="user_id" translatable="false">idloginuser</string>
    <string name="Error_login">Invalid data</string>
    <string name="Error_Error">Error</string>
    <string name="noData">No Data</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="adicionarponto">Add Point</string>
    <string name="problema">Problem</string>
    <string name="obras">construction</string>
    <string name="acidentes">accidents</string>
    <string name="Campos_vazios">Some of the fields were studied empty</string>
    <string name="permissoes">There are no prizes for this operation</string>
    <string name="_1000_metros" translatable="false">10000 m</string>
    <string name="_500_metros" translatable="false">2500 m</string>
    <string name="limpar">Clear</string>
</resources>
